--- a/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
+++ b/manuscrit_G_LEFEBVRE/chap_optim_grey.tex
@@ -13,6 +13,7 @@
 \section{Présentation de l'approche}
 Pour un patient donné, on considère $n$ instants auxquels on possède des scanners (aux temps $t_i, i\in \{ 1,...,n \}$). Sur ces $n$ images, on propose d'optimiser les coefficients de l'interpolation $\tau_N N + \tau_P P + \tau_S S$:
 \begin{equation}
+\label{eq:optim_grey_integ_aire}
 \begin{aligned}
 \frac{1}{\aire\big(Z_1(t_i)\big)}&\left( \tau_N\intperso{Z_1(t_i)}N(t_i,x) \dx + \tau_P\intperso{Z_1(t_i)}P(t_i,x) \dx + \tau_S\intperso{Z_1(t_i)} S(t_i,x) \dx \right) \\
 &= \frac{1}{\aire\big(Z_2(t_i)\big)} \ \intperso{Z_2(t_i)} s(t_i,x,z_0) \dx \qquad i \in \{1,...,n\}
@@ -28,6 +29,7 @@ où : \begin{itemize}
 \end{itemize}
 En utilisant la discrétisation, aussi bien sur les simulations numériques que sur les scanners, on obtient :
 \begin{equation}
+\label{eq:optim_grey_eq_discr}
 \begin{aligned}
 \frac{1}{\mathcal{N}\big(Z_1(t_i)\big)}&\left( \tau_N\!\!\sum_{x\in Z_1(t_i)}\!\!N(t_i,x) + \tau_P\!\!\sum_{x\in Z_1(t_i)}\!\!P(t_i,x) + \tau_S\!\!\sum_{x\in Z_1(t_i)}\!\!S(t_i,x) \right) \\
 &= \frac{1}{\mathcal{N}\big(Z_2(t_i)\big)} \sum_{x\in Z_2(t_i)}\!\! s(t_i,x,z_0) \qquad i \in \{1,...,n\}
@@ -180,17 +182,54 @@ La Table~\ref{tab:optim3gris} synthétise l'ensemble des résultats d'optimisati
 On remarque que plus le nombre d'image considérées est grand, plus l'erreur à convergence est grande. Ce comportement est attendu et ne pose pas de problème tant que l'erreur reste acceptable (de l'ordre de quelques pourcents). Augmenter le nombre d'images considérées s'avère utile pour rendre les optima moins sensibles aux perturbations éventuelles qu'il y a sur les données (bruit, marge d'erreur de segmentation manuelle, etc ...).
 
 
-On peut de plus remarquer que selon les images choisies et selon les algorithmes choisis les résultats sont assez variables. Les moyennes des optima trouvés selon l'algorithme sont présentés sur la dernière ligne de la Table~\ref{tab:optim3gris}. Seul l'algorithme SLSQP se démarque des autres qui ont une valeur moyenne de $\tau_P$ non seulement proche de $\tau_S$ - ce qui ne facilite pas du tout le contraste du tissu proliférant avec le tissu sain - mais aussi supérieur à $\tau_S$ alors qu'on s'attendrait plutôt à l'inverse...
-\todo[inline]{ FAUX !!! \\
-En fait le paramètre $\tau_S$ est très peu influent dans le calcul de l'erreur~\eqref{eq:min_optim_grey} car il n'y a que très peu de tissu sain dans le périmètre tumoral. La valeur de $\tau_S$ n'a donc que très peu de poids et donc il est difficile de la déterminer avec ce type d'approche.
-}
+On peut de plus remarquer que selon les images choisies et selon les algorithmes choisis les résultats sont assez variables. Les moyennes des optima trouvés selon l'algorithme sont présentés sur la dernière ligne de la Table~\ref{tab:optim3gris}. Seul l'algorithme SLSQP se démarque des autres qui ont une valeur moyenne de $\tau_P$ non seulement proche de $\tau_S$ - ce qui ne facilite pas du tout le contraste du tissu proliférant avec le tissu sain - mais aussi supérieur à $\tau_S$ alors qu'on s'attendrait plutôt à l'inverse... De plus, des images ont été reconstituées avec des valeurs de $\tau_S$ aux alentours de 140 et 150. Il apparaît que la couleur du tissu sain n'est pas bonne~: il est beaucoup trop foncé.
+
+
+Pour expliquer l'erreur commise sur~$\tau_S$, on aurait pu penser à une large variabilité permise sur ce paramètre dûe à la présence très minoritaire de tissu sain dans la tumeur. Ainsi $\tau_S$ serait très peu influent dans le calcul de l'erreur~\eqref{eq:min_optim_grey}. Cependant après avoir examiné de plus près les valeurs des intégrales de l'équation~\eqref{eq:optim_grey_integ_aire}, il y a toujours au moins 10\% de cellules saines. La plupart du temps, elles sont réparties sur le pourtour de la tumeur, dans la zone de transition sur laquelle il y a un mélange de tissu sain et de tissu tumoral. Ceci écarte donc l'hypothèse avancée. On pourrait alors avancer des variations dans les données (bruit dans les images, erreur sur le contourage, variation du temps d'acquisition du scanner qui impacte sur les niveaux de gris, ... ) pour justifier cela, mais les impacts sont difficiles à mesurer. 
+Il n'en reste pas moins que le niveau de gris $\tau_S$ est mal estimé. 
+Pour palier à cela, nous allons le fixer dans la section suivante.
 
 On note également que la combinaison $[1,9,11]$ ne semble pas pertinente pour calculer les niveaux de gris puisque les optima tendent vers les bornes autorisées ($[0,255]$).
 
 %%%%%  ---- SECTION  OPTIM SUR 2 NVX DE GRIS ----- %%%%%
 \section{Optimisation sur 2 paramètres, $\tau_S$ fixé}
-Pour essayer de palier aux problèmes rencontrés dans la section précédentes, nous allons fixer $\tau_S$ à une valeur de 197 (sur l'échelle des niveaux de gris de 0 à 255). Cette valeur a été fixée en réalisant un contourage d'une zone en tissu sain dans OsiriX (cf. Figure~\ref{fig:contourage_sain}). La moyenne de ce contourage est de 134.5 HU. Le niveau de gris étant échelonné linéairement entre~-135 et~215, on peut ainsi faire correspondre cette quantité en HU à un niveau de gris compris entre~0 et~255. Ainsi, selon l'échelle considérée ici, 134.5~HU équivaut à un gris de 77\% soit un gris de niveau~197.
-\todo[inline]{schema correspondance HU \% et grey lvl}
+Pour essayer de palier aux problèmes rencontrés dans la section précédentes, nous allons fixer $\tau_S$ à une valeur de 197 (sur l'échelle des niveaux de gris de 0 à 255). Cette valeur a été fixée en réalisant un contourage d'une zone en tissu sain dans OsiriX (cf. Figure~\ref{fig:contourage_sain}). La moyenne de ce contourage est de 134.5 HU. Le niveau de gris étant échelonné linéairement entre~-135 et~215, on peut ainsi faire correspondre cette quantité en HU à un niveau de gris compris entre~0 et~255 (\cf Figure~\ref{fig:schema_correspondance_gris}). Ainsi, selon l'échelle considérée ici, 134.5~HU équivaut à un gris de 77\% soit un gris de niveau~197.
+
+
+\begin{figure}
+\centering
+\begin{tikzpicture}
+  \shade[left color=black, right color=white] (0,0) rectangle (10,1);   
+  \draw (0,1.2) -- (10,1.2) ;
+  \draw (0,2.2) -- (10,2.2) ;
+  \draw (0,3.2) -- (10,3.2) ;
+  \foreach \x/\xtexta/\xtextb/\xtextc in {0/0/0/-135\ \ \ \ \  ,
+  1/0.1/26/-100\ \ , %%%pour forcer des espaces
+  2/0.2/51/-65\ , 
+  3/0.3/77/-30\ , 
+  4/0.4/103/5, 
+  5/0.5/128/40, 
+  6/0.6/154/75, 
+  7/0.7/179/110, 
+  8/0.8/205/145, 
+  9/0.9/230/180, 
+  10/1/255/215}{
+    \draw[shift={(\x,1.2)}] (0pt,4pt) -- (0pt,0pt) node[above] {$\xtextb$};    
+    \draw[shift={(\x,2.2)}] (0pt,4pt) -- (0pt,0pt) node[above] {$\xtexta$};
+    \draw[shift={(\x,3.2)}] (0pt,4pt) -- (0pt,0pt) node[above] {$\xtextc$};
+    }
+  \foreach \x in {0,1,2,3,4,5,6,7,8,9}{
+  	\draw[shift={(\x+0.5,1.2)}] (0pt,2pt) -- (0pt,0pt) ; 
+  	\draw[shift={(\x+0.5,2.2)}] (0pt,2pt) -- (0pt,0pt) ;
+  	\draw[shift={(\x+0.5,3.2)}] (0pt,2pt) -- (0pt,0pt) ;
+  	}
+  	\draw (10.7,3.4) node[right] {HU};   
+  	\draw (10.7,2.4) node[right] { \% gris}; 
+  	\draw (10.7,1.4) node[right] {niveaux de gris};     
+\end{tikzpicture}
+\caption{\label{fig:schema_correspondance_gris} Correspondance des niveaux de gris }
+\end{figure}
+\todo[noline]{Titre figure \ref{fig:schema_correspondance_gris} à revoir ...}
 
 \begin{figure}
 \includegraphics[width=\textwidth]{OsiriX_gris_sain_rognee.png}
