Completion de l'annexe regul Moreau Yosida

--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -1,6 +1,7 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
 %%\chapter{Tableaux et graphiques complémentaires}
+\newpage
 ========= DEBUT ANNEXE TABLEAUX ET GRAPHIQUES =====
 
 %%\section{Tableaux d'optimisation sur les niveaux de gris}
