--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -185,52 +185,55 @@ Pour les histogrammes numériques, seule une image est reconstruite par la simul
 \end{figure}
 
 
+\newlength{\largeurhisto}
+\setlength{\largeurhisto}{0.24\textwidth}
+
 \begin{figure}
 \centering
-\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_05_20_histo.png}}\ 
-\subfloat[Jour 119]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_09_16_histo.png}}\ 
-\subfloat[Jour 209]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_12_15_histo.png}}\ 
-\subfloat[Jour 275]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_02_19_histo.png}}\ 
-\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_04_16_histo.png}}\ 
-\subfloat[Jour 406]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_06_30__slice-244_85_histo.png}}\ 
-\subfloat[Jour 493]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_09_25_histo.png}}\ 
-\subfloat[Jour 535]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_11_06_histo.png}}\ 
-\subfloat[Jour 611]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_01_21_histo.png}}\ 
-\subfloat[Jour 688]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_04_08_histo.png}}\ 
-\subfloat[Jour 776]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_07_05__slice-263_20_histo.png}}\ 
-\subfloat[Jour 867]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_10_04__slice-239_40_histo.png}}\ 
-\subfloat[Jour 888]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_10_25__slice-246_60_histo.png}}\ 
-\subfloat[Jour 927]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_12_03_histo.png}}\ 
-\subfloat[Jour 962]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_01_07__slice-221_20_histo.png}}\ 
-\subfloat[Jour 990]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_02_04_histo.png}}\ 
-\subfloat[Jour 1053]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_04_08_histo.png}}\ 
-\subfloat[Jour 1116]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_06_10_histo.png}}\ 
-\subfloat[Jour 1179]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_08_12_histo.png}}
+\subfloat[Jour 0]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2008_05_20_histo.png}}\ 
+\subfloat[Jour 119]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2008_09_16_histo.png}}\ 
+\subfloat[Jour 209]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2008_12_15_histo.png}}\ 
+\subfloat[Jour 275]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2009_02_19_histo.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2009_04_16_histo.png}}\ 
+\subfloat[Jour 406]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2009_06_30__slice-244_85_histo.png}}\ 
+\subfloat[Jour 493]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2009_09_25_histo.png}}\ 
+\subfloat[Jour 535]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2009_11_06_histo.png}}\ 
+\subfloat[Jour 611]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_01_21_histo.png}}\ 
+\subfloat[Jour 688]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_04_08_histo.png}}\ 
+\subfloat[Jour 776]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_07_05__slice-263_20_histo.png}}\ 
+\subfloat[Jour 867]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_10_04__slice-239_40_histo.png}}\ 
+\subfloat[Jour 888]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_10_25__slice-246_60_histo.png}}\ 
+\subfloat[Jour 927]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2010_12_03_histo.png}}\ 
+\subfloat[Jour 962]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_01_07__slice-221_20_histo.png}}\ 
+\subfloat[Jour 990]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_02_04_histo.png}}\ 
+\subfloat[Jour 1053]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_04_08_histo.png}}\ 
+\subfloat[Jour 1116]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_06_10_histo.png}}\ 
+\subfloat[Jour 1179]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_08_12_histo.png}}
 \caption{\label{fig:histo_dcm_Nber} Histogramme clinique de la tumeur de \Nber. }
 \end{figure}
 
 \begin{figure}
 \centering
-\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_05_23_histo.png}}\ 
-\subfloat[Jour 93]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_08_24_histo.png}}\ 
-\subfloat[Jour 182]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_11_21_histo.png}}\ 
-\subfloat[Jour 279]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_02_26_histo.png}}\ 
-\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_04_18_histo.png}}\ 
-\subfloat[Jour 429]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_07_25_histo.png}}\ 
-\subfloat[Jour 614]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_01_26_histo.png}}\ 
-\subfloat[Jour 715]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_05_07_histo.png}}\ 
-\subfloat[Jour 845]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_09_14_histo.png}}\ 
-\subfloat[Jour 936]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_12_14_histo.png}}\ 
-\subfloat[Jour 1009]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_02_25_histo.png}}\ 
-\subfloat[Jour 1049]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_04_06_histo.png}}\ 
-\subfloat[Jour 1093]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_05_20_histo.png}}\ 
-\subfloat[Jour 1161]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_07_27_histo.png}}\ 
-\subfloat[Jour 1224]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_09_28_histo.png}}\ 
-\subfloat[Jour 1296]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_12_09_histo.png}}\ 
-\subfloat[Jour 1377]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_02_28_histo.png}}\ 
-\subfloat[Jour 1415]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_04_07_histo.png}}\ 
-\subfloat[Jour 1458]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_05_20_histo.png}}\ 
-\subfloat[Jour 1510]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_07_11_histo.png}}\
+\subfloat[Jour 0]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2007_05_23_histo.png}}\ 
+\subfloat[Jour 93]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2007_08_24_histo.png}}\ 
+\subfloat[Jour 182]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2007_11_21_histo.png}}\ 
+\subfloat[Jour 279]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2008_02_26_histo.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2008_04_18_histo.png}}\ 
+\subfloat[Jour 429]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2008_07_25_histo.png}}\ 
+\subfloat[Jour 614]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2009_01_26_histo.png}}\ 
+\subfloat[Jour 715]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2009_05_07_histo.png}}\ 
+\subfloat[Jour 845]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2009_09_14_histo.png}}\ 
+\subfloat[Jour 936]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2009_12_14_histo.png}}\ 
+\subfloat[Jour 1009]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_02_25_histo.png}}\ 
+\subfloat[Jour 1049]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_04_06_histo.png}}\ 
+\subfloat[Jour 1093]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_05_20_histo.png}}\ 
+\subfloat[Jour 1161]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_07_27_histo.png}}\ 
+\subfloat[Jour 1224]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_09_28_histo.png}}\ 
+\subfloat[Jour 1296]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2010_12_09_histo.png}}\ 
+\subfloat[Jour 1377]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_02_28_histo.png}}\ 
+\subfloat[Jour 1415]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_04_07_histo.png}}\ 
+\subfloat[Jour 1458]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_05_20_histo.png}}\ 
+\subfloat[Jour 1510]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_07_11_histo.png}}\
 \caption{\label{fig:histo_dcm_Chen} Histogramme clinique de la tumeur de \Chen. }
 \end{figure}
 
@@ -497,7 +500,7 @@ On souhaite construire ici un critère qui varie de manière monotone en fonctio
 \subfloat[Avec adaptation $\mathcal{H}_6$]{\includegraphics[width=0.49\textwidth]{graph_hetero/dcm_Nber/04-angle_complet_rescaleL2.png}}
 \caption{\label{fig:crit_hetero_angle}Critères basés sur des angles entre points particuliers de l'histogramme des niveaux de gris.}
 \end{figure}
-Pour beaucoup d'angles les résultats fournis sont insatisfaisant : certains sont quasiment constant ($\mathcal{H}_{5,6}(\widehat{HRJ}$ par exemple), d'autres sont très chaotique (comme $\mathcal{H}_{5,6}(\widehat{ARB}$). Sur la Figure~\ref{fig:crit_hetero_angle} est présenté les critères d'\hetero restants (\ie non écarté pour les raisons précédentes). 
+Pour beaucoup d'angles les résultats fournis sont insatisfaisant : certains sont quasiment constant ($\mathcal{H}_{5,6}(\widehat{HRJ})$ par exemple), d'autres sont très chaotique (comme $\mathcal{H}_{5,6}(\widehat{ARB}$). Sur la Figure~\ref{fig:crit_hetero_angle} est présenté les critères d'\hetero restants (\ie non écarté pour les raisons précédentes). 
 Les critères basés sur l'angle $\widehat{MRI}$ ou sur l'angle $\widehat{MRA}$ semblent ne pas bien capturés le premier pic d'\hetero même si le second pic est capté ainsi que la remontée finale. Les critères basés sur l'angle $\widehat{HRB}$ semblent eux bien capté les moments hétérogènes. Les pics d'\hetero sont cependant %assez faible et parfois 
 assez peu différents de certains passages homogènes... 
 %Les critères basés sur l'angle $\widehat{MRA}$ quant à eux, capturent très bien les deux premiers pics d'\hetero. Les passages homogènes sont également bien traduit (plateau lors du premier traitement, et pic descendant lors du second traitement). La recroissance finale de l'\hetero semble un peu plus laborieuse à capturer dans le cas du critère $\mathcal{H}_5$.
