--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -23,12 +23,15 @@
 \usepackage{lettrine}
 \usepackage{mathabx} %% Pour avoir proprement le grand symbole \sqrt notamment
 \usepackage{mathtools}
+\usepackage{caption} %% Permet d'utiliser \captionof sans etre dans un environnement figure
 \usepackage{subfig}%% \subfloat
+%\usepackage{wrapfig}%% \begin{wrapfigure}
 %%\usepackage{stackengine}
 \usepackage{xspace}
 \usepackage{lipsum}
 \usepackage{booktabs} %% midrule
 \usepackage{array}
+\usepackage{multicol}
 \usepackage{multirow}
 \usepackage{colortbl} %% rowcolor
 \usepackage[table]{xcolor} %% gray!40  %% rowcolors
@@ -74,6 +77,9 @@
 \setlength{\retraittableau}{-4mm}
 \newlength{\firstcolwidth} %% on ne peut mettre ni chiffre ni caractere special dans le nom d'une longueur
 \setlength{\firstcolwidth}{22mm}
+\newlength{\defaultcolumnsep}
+\setlength{\defaultcolumnsep}{25pt}
+\setlength\columnsep{\defaultcolumnsep}
 
 \theoremstyle{definition}
 \newtheorem{thm}{Théorème}[section]
@@ -99,8 +105,8 @@
 %%%%%%% Personnalisation des legendes
 %\captionsetup[figure]{labelfont=it,textfont={bf,it}}
 %\captionsetup[subfigure]{labelfont=bf,textfont=normalfont,justification=raggedright}
- 
 
+\newcommand{\mylettrine}[2]{\lettrine[lines=2, lhang=0.33, loversize=0.25]{#1}{#2}} 
 %%%%%% MES MACROS %%%%%%%%
 
 \newcommand{\custompart}[3]{
@@ -243,8 +249,9 @@
 \subfile{chap_analyse_heterogeneite}
 
 \appendix %%%% Les annexes
+\subfile{annexe_penalisation}
 \subfile{annexe_gaussienne}
-%\subfile{annexe_tableaux_graphiques_complementaires}
+\subfile{annexe_tableaux_graphiques_complementaires}
 
 \backmatter  %%%% l'épilogue du document
 %%\chapter{Conclusion et discussion}
